--- a/dev_src/style_main.css
+++ b/dev_src/style_main.css
@@ -246,6 +246,8 @@ a {
 	--popup-btn-bg: #313131;
 	--popup-btn-bg-active: #005ab2;
 	--popup-btn-border: 1px solid #006ad2;
+
+	--action-btn-width: 50px;
 }
 
 .modal_bg {
@@ -810,20 +812,22 @@ ul {
 	display: none;
 	position: fixed;
 	z-index: 6;
-	right: 65px;
 	bottom: 20px;
-	width: calc(98% - 65px);
+
+
+	right: calc(var(--action-btn-width) + 15px);
+	width: calc(98% - var(--action-btn-width) - 15px);
 	max-width: 300px;
+
 	height: 50px;
 	border-radius: 6px;
 	background-color: #000000a3;
 	color: #fff;
 
-
-
 	font-size: small;
-
 	box-shadow: 0px 5px 5px -3px var(--popup-btn-bg-active);
+
+	cursor: pointer;
 }
 
 #progress-island span {
@@ -940,6 +944,10 @@ ul {
 	#actions-btn {
 		border-radius: 20px;
 		padding: 0 10px;
+	}
+
+	:root {
+		--action-btn-width: 120px;
 	}
 }
 
